--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/app
+    destination: /home/ubuntu/my-project1  # Destination on your EC2 instance
 hooks:
   AfterInstall:
-    - location: scripts/install_dependencies.sh
+    - location: install/install_dependencies.sh  # Update path if needed
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: install/start_server.sh
       timeout: 300
       runas: root
