--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/my-project1  # Where to copy the files on EC2
+    destination: /home/ubuntu/myproject
 hooks:
-  AfterInstall:
-    - location: install_dependencies.sh  # Or scripts/install_dependencies.sh if in a folder
+  BeforeInstall:
+    - location: Scripts/install_dependencies.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: start_server.sh  # Or scripts/start_server.sh if in a folder
+    - location: Scripts/start_application.sh
       timeout: 300
       runas: root
