--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/myproject
+    destination: /home/ubuntu/myproject1
 hooks:
   BeforeInstall:
     - location: Scripts/install_dependencies.sh
