--- a/appspec.yml
+++ b/appspec.yml
@@ -9,6 +9,6 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: Scripts/start_application.sh
+    - location: Scripts/start_server.sh
       timeout: 300
       runas: root
